@startuml

left to right direction

package org.java8.utils.api {

    interface Validator<E> {
        + boolean validate(E e)
    }

    package impl {

        class BossValidator<Employee>

        class BusinessCodeValidator<Project>

        class DatabasesValidator<Project>

        class DurationValidator<Project>

        class EmployeeValidator<Employee>

        class NameValidator<Project>

        class ProgrammingLanguageValidator<Project>

        class ProjectInstanceValidator<Project>

        class TeamValidator<Project>

    }

    Validator <|-- BossValidator

    Validator <|-- BusinessCodeValidator

    Validator <|-- BusinessCodeValidator

    Validator <|-- DatabasesValidator

    Validator <|-- DurationValidator

    Validator <|-- EmployeeValidator

    Validator <|-- NameValidator

    Validator <|-- ProgrammingLanguageValidator

    Validator <|-- ProjectInstanceValidator

    Validator <|-- TeamValidator

@enduml
